--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "llama2.c"]
-	path = llama2.c
-	url = https://github.com/karpathy/llama2.c.git
+	path = llama2c_package/llama2.c
+	url = https://github.com/davidscmx/llama2.c
